make post hero image ::before element to avoid overlapping blog heading on small screens

--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -4,8 +4,22 @@
 
 .section--hero--post
   display: flex
-  align-items: flex-end
-  justify-content: flex-start
+  flex-direction: column
+  align-items: flex-start
+  justify-content: flex-end
+  &::before
+    content: ''
+    width: 100%
+    height: 100%
+    background-size: cover
+    background-position: center
+    @media screen and (min-width: $medium-screen)
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+
 
 .section-text--post
   padding: 0
